--- a/sniper/http/CMakeLists.txt
+++ b/sniper/http/CMakeLists.txt
@@ -2,44 +2,51 @@ set(LIB http)
 
 include_directories(.)
 
-set(LIB_HEADERS
+set(LIB_SRC
     Server.h
+    Server.cpp
     Client.h
+    Client.cpp
     SyncClient.h
+    SyncClient.cpp
     utils.h
+    utils.cpp
     Wait.h
+    Wait.cpp
+    Server2.h
+    Server2.cpp
     server/Config.h
     server/Connection.h
+    server/Connection.cpp
     server/Request.h
+    server/Request.cpp
     server/Response.h
+    server/Response.cpp
     server/Status.h
+    server/Status.cpp
+    server2/Connection.h
+    server2/Connection.cpp
+    server2/Request.h
+    server2/Request.cpp
+    server2/Response.h
+    server2/Response.cpp
+    server2/Pool.h
+    server2/Pool.cpp
     client/Connection.h
+    client/Connection.cpp
     client/Request.h
+    client/Request.cpp
     client/Response.h
+    client/Response.cpp
     client/Config.h
     client/Pool.h
-    wait/Group.h
-    )
-
-set(LIB_SOURCES
-    Server.cpp
-    Client.cpp
-    SyncClient.cpp
-    utils.cpp
-    Wait.cpp
-    server/Connection.cpp
-    server/Request.cpp
-    server/Response.cpp
-    server/Status.cpp
-    client/Connection.cpp
-    client/Request.cpp
-    client/Response.cpp
     client/Pool.cpp
+    wait/Group.h
     wait/Group.cpp
     )
 
 #Library
-add_library(sniper_${LIB} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
+add_library(sniper_${LIB} STATIC ${LIB_SRC})
 target_link_libraries(sniper_${LIB} ev.a)
 target_link_libraries(sniper_${LIB} sniper_event)
 target_link_libraries(sniper_${LIB} sniper_net)
