--- a/sniper/net/CMakeLists.txt
+++ b/sniper/net/CMakeLists.txt
@@ -24,7 +24,7 @@ set(LIB_SOURCES
 
 #Library
 add_library(sniper_${LIB} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
-target_link_libraries(sniper_${LIB} dl)
+#target_link_libraries(sniper_${LIB} dl)
 target_link_libraries(sniper_${LIB} sniper_xxhash)
 
 set(SNIPER_LIBRARIES ${SNIPER_LIBRARIES} "sniper_${LIB}" CACHE INTERNAL "sniper_libraries")
