--- a/sniper/http/CMakeLists.txt
+++ b/sniper/http/CMakeLists.txt
@@ -33,6 +33,23 @@ set(LIB_SRC
     client/Pool.cpp
     wait/Group.h
     wait/Group.cpp
+
+    Server2.h
+    Server2.cpp
+    server2/ServerInt.h
+    server2/ServerInt.cpp
+    server2/Connection.h
+    server2/Connection.cpp
+    server2/Pool.h
+    server2/Pool.cpp
+    server2/Request.h
+    server2/Request.cpp
+    server2/Response.h
+    server2/Response.cpp
+    server2/RequestBuf.h
+    server2/RequestBuf.cpp
+    server2/Buffer.h
+    server2/Buffer.cpp
     )
 
 #Library
