--- a/sniper/CMakeLists.txt
+++ b/sniper/CMakeLists.txt
@@ -1,7 +1,31 @@
-if (DEFINED libsniper)
-    foreach(dir ${libsniper})
-        if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${dir} AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${dir})
+if (DEFINED RTBTECH_DEPS)
+    set(DEPENDENCIES "")
+
+    foreach (dir ${RTBTECH_DEPS})
+        if (IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${dir} AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${dir})
+            message("Added: ${dir}")
             add_subdirectory(${dir})
-        endif()
-    endforeach()
-endif()
+        endif ()
+    endforeach ()
+
+
+    while (TRUE)
+        set(STOP true)
+
+        foreach (dir ${DEPENDENCIES})
+            if (IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${dir} AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${dir})
+                if (NOT ("${dir}" IN_LIST RTBTECH_DEPS))
+                    set(RTBTECH_DEPS ${RTBTECH_DEPS} ${dir})
+                    message("Added: ${dir}")
+                    add_subdirectory(${dir})
+                    set(STOP false)
+                endif ()
+            endif ()
+        endforeach ()
+
+        if (STOP)
+            break()
+        endif ()
+    endwhile ()
+
+endif ()
