--- a/sniper/threads/CMakeLists.txt
+++ b/sniper/threads/CMakeLists.txt
@@ -9,4 +9,5 @@ set(LIB_HEADERS
     )
 
 
+set(DEPENDENCIES "${DEPENDENCIES}" "cache" PARENT_SCOPE)
 add_custom_target(sniper_${LIB} SOURCES ${LIB_HEADERS})
