--- a/sniper/file/CMakeLists.txt
+++ b/sniper/file/CMakeLists.txt
@@ -7,4 +7,5 @@ set(LIB_HEADERS
     load.h
     )
 
+set(DEPENDENCIES "${DEPENDENCIES}" "std" PARENT_SCOPE)
 add_custom_target(sniper_${LIB} SOURCES ${LIB_HEADERS})
