--- a/sniper/event/CMakeLists.txt
+++ b/sniper/event/CMakeLists.txt
@@ -21,8 +21,12 @@ set(LIB_SOURCES
     Resolve.cpp
     )
 
+find_package(Libev REQUIRED)
+include_directories(SYSTEM ${LIBEV_INCLUDE_DIR})
+
 #Library
 add_library(sniper_${LIB} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
+target_link_libraries(sniper_${LIB} ${LIBEV_LIBRARY})
 
 set(DEPENDENCIES "${DEPENDENCIES}" "std" "net" PARENT_SCOPE)
 set(SNIPER_LIBRARIES ${SNIPER_LIBRARIES} "sniper_${LIB}" CACHE INTERNAL "sniper_libraries")
