--- a/sniper/net/CMakeLists.txt
+++ b/sniper/net/CMakeLists.txt
@@ -2,7 +2,7 @@ set(LIB net)
 
 include_directories(.)
 
-set(LIB_HEADERS
+set(LIB_SOURCES
     ip.h
     socket.h
     Url.h
@@ -10,9 +10,6 @@ set(LIB_HEADERS
     Peer.h
     Domain.h
     hostname.h
-    )
-
-set(LIB_SOURCES
     ip.cpp
     socket.cpp
     Url.cpp
@@ -22,9 +19,14 @@ set(LIB_SOURCES
     hostname.cpp
     )
 
+find_package(fmt REQUIRED)
+find_package(Libre2 REQUIRED)
+include_directories(SYSTEM ${LIBRE2_INCLUDE_DIR})
+
 #Library
-add_library(sniper_${LIB} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
-#target_link_libraries(sniper_${LIB} dl)
+add_library(sniper_${LIB} STATIC ${LIB_SOURCES})
+target_link_libraries(sniper_${LIB} dl ${LIBRE2_LIBRARY})
+target_link_libraries(sniper_${LIB} fmt::fmt)
 
 set(DEPENDENCIES "${DEPENDENCIES}" "std" "xxhash" PARENT_SCOPE)
 set(SNIPER_LIBRARIES ${SNIPER_LIBRARIES} "sniper_${LIB}" CACHE INTERNAL "sniper_libraries")
