--- a/sniper/event/CMakeLists.txt
+++ b/sniper/event/CMakeLists.txt
@@ -2,30 +2,33 @@ set(LIB event)
 
 include_directories(.)
 
-set(LIB_HEADERS
-    Loop.h
-    Timer.h
-    TimerDetail.h
-    Prepare.h
-    Touch.h
-    Sig.h
-    Resolve.h
-    )
-
-set(LIB_SOURCES
-    Touch.cpp
-    Prepare.cpp
-    Timer.cpp
-    TimerDetail.cpp
-    Sig.cpp
-    Resolve.cpp
-    )
+set(LIB_SRC
+        Loop.h
+        Timer.h
+        TimerDetail.h
+        Prepare.h
+        Touch.h
+        Sig.h
+        Resolve.h
+        Touch.cpp
+        Prepare.cpp
+        Timer.cpp
+        TimerDetail.cpp
+        Sig.cpp
+        Resolve.cpp
+        Wait.h
+        Wait.cpp
+        wait/Group.h
+        wait/Group.cpp
+        wait/Pool.h
+        wait/Pool.cpp
+        )
 
 find_package(Libev REQUIRED)
 include_directories(SYSTEM ${LIBEV_INCLUDE_DIR})
 
 #Library
-add_library(sniper_${LIB} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
+add_library(sniper_${LIB} STATIC ${LIB_SRC})
 target_link_libraries(sniper_${LIB} ${LIBEV_LIBRARY})
 
 set(DEPENDENCIES "${DEPENDENCIES}" "std" "net" PARENT_SCOPE)
