async loop, prepare, sig, timer, wait

--- a/sniper/async/CMakeLists.txt
+++ b/sniper/async/CMakeLists.txt
@@ -1,3 +1,10 @@
+set(LIB async)
+include_directories(.)
+
+set(LIB_HEADERS
+        Loop.h
+        )
+
 if (DEFINED RTBTECH_DEPS)
     foreach (dir ${RTBTECH_DEPS})
         if (IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${dir} AND EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${dir})
@@ -7,4 +14,5 @@ if (DEFINED RTBTECH_DEPS)
     endforeach ()
 endif ()
 
-set(DEPENDENCIES "${DEPENDENCIES}" PARENT_SCOPE)
+set(DEPENDENCIES "${DEPENDENCIES}" "std" PARENT_SCOPE)
+add_custom_target(rtbtech_${LIB} SOURCES ${LIB_HEADERS})
